# lingjian-pinyin

./: CMakeLists.txt  README.md  build_deb.sh
src/: CMakeLists.txt
src/fcitx/: CMakeLists.txt  lingjian-addon.conf.in  lingjian-im.conf.in  lingjian.cpp  lingjian.h
src/ui/: CMakeLists.txt
